# openssl-encrypt

./: CMakeLists.txt
.github/workflows/: cmake.yml
decrypt/: CMakeLists.txt  decrypt.c
encrypt/: CMakeLists.txt  encrypt.c
